fix z-indexes dashboard

--- a/client/src/style/dashboard.css
+++ b/client/src/style/dashboard.css
@@ -14,6 +14,7 @@ body {
 html, body, #root, .App {
     min-height: 100vh;
     position:relative;
+    z-index: -1001;
 }
 
 #root {
@@ -23,6 +24,7 @@ html, body, #root, .App {
 }
 
 .dashboard-page-container {
+    position: relative;
     margin: auto;
     width: 100%;
     margin-top: 2%;
@@ -30,6 +32,7 @@ html, body, #root, .App {
     grid-template-columns: 35% 45% 20%;
     grid-template-rows: 80% 20%;
     height: 1175px;
+    z-index: -1000;
 }
 
 .background-color-splash {
@@ -275,7 +278,7 @@ html, body, #root, .App {
     margin-bottom: 24%;
     margin-top: 45%;
     margin-left: 30%;
-    z-index: 10;
+    z-index: -10;
 }
 
 .recipes-loading-text {
